package com.example.SOEX_PROJECT_JRN;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SoexProjectJrnApplication {

	public static void main(String[] args) {
		SpringApplication.run(SoexProjectJrnApplication.class, args);
	}
}
