package com.example.SOEX_PROJECT_JRN.model;

public class TransportResponse {
    private String data;

    public TransportResponse() {}

    public TransportResponse(String data) {
        this.data = data;
    }

    public String getData() {
        return data;
    }

    public void setData(String data) {
        this.data = data;
    }
}

